--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     </intent>
   </queries>
   <application
-       android:label="ReksaKeren"
+       android:label="Trufi"
        android:name="${applicationName}"
        android:icon="@mipmap/ic_launcher">
     <activity
